--- a/environments/03_Car_Rental_Enterprise/style.css
+++ b/environments/03_Car_Rental_Enterprise/style.css
@@ -167,6 +167,26 @@ body {
     grid-column: 1 / -1;
 }
 
+.location-input-field{
+    position: absolute;
+  inset: 0; 
+  margin: 0;
+  z-index: 1;
+  left: 80px;
+  top: 80px;
+  height: 60px;
+  width: 400px;
+
+  padding:12px;
+  background: rgba(235, 235, 239, 0.815);
+  border:1px solid var(--edge-strong);
+  border-radius:3px;
+  color:var(--ink);
+  font-size:14px;
+  overflow:hidden;
+  opacity: 0.05;
+}
+
 .search-btn {
     background: #00a651;
     color: white;
